# pianist

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS 2.md  AGENTS.md  AI_PROMPTING_GUIDE.md  GEMINI_COMPATIBILITY.md  Jan-08-2026_references_report.csv  LICENSE  MISSION.md  Makefile  PEDAL_ANALYSIS.md  PEDAL_FIXES_SUMMARY.md  PEDAL_FIX_USAGE.md  PLANNING.md  PREPARATION.md  PROMPT_SYNC.md  PR_CHECKLIST.md  PR_SUMMARY.md  PYTHON_3_14_FIX_REVIEW.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  SCHEMA_GENERATION.md  SUMMARY.md  analyze_pedal.py  fix_entry_point.py  fix_existing_compositions.py  fix_pedal_patterns.py  main.py  pianist  pyproject.toml  requirements.txt  run_all_examples.sh  schema.gemini.json  schema.json  setup.py
.github/workflows/: prompt-sync.yml
docs/: API_KEY_MANAGEMENT.md  API_KEY_SETUP_SUMMARY.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_STRUCTURE.md  INTEGRATION_TESTING.md  INTEGRATION_TESTING_SUMMARY.md  OUTPUT_DIRECTORY_DESIGN.md  PEDAL_FIX_USAGE.md  SCHEMA_GENERATION.md  TICK_TO_BEAT_FIX.md
docs/commands/: README.md  analyze.md  annotate.md  diff.md  expand.md  fix.md  generate.md  import.md  modify.md  reference.md  render.md
docs/guides/: CONFIGURATION.md  ENHANCED_MIDI_IDENTIFICATION.md  MIDI_FILE_NAMING_CONVENTION.md  MIDI_IDENTIFICATION_IMPLEMENTATION 2.md  MIDI_IDENTIFICATION_IMPLEMENTATION.md  MIDI_NORMALIZATION.md  MIDI_QUALITY_CHECK.md  OLLAMA_SETUP.md  README.md  REFERENCE_CURATION_LIST.md  REFERENCE_DATABASE_ACTION_ITEMS.md  REFERENCE_DATABASE_CURATION.md  REFERENCE_DATABASE_EXPANSION_PLAN.md  testing_analysis.md
docs/reference/: README.md
docs/technical/: CODE_QUALITY.md  README.md  REFERENCE_DATABASE_ENHANCEMENTS.md  SCRIPT_CONSOLIDATION.md  STYLE_SUGGESTIONS.md  analysis_technical_details.md  music21_performance_optimization.md
docs/temp/: COMPREHENSIVE_ANALYSIS_CLI_PLAN.md  README.md  analysis_library_decision.md  analysis_library_research.md  cli_assessment.md  cli_design.md  command_structure_design.md  schema_extensions_design.md  testing_musical_analysis.md  tonesemantics_evaluation.md
docs/workflows/: README.md  ai_human_collaboration.md  composition_iteration.md  expanding_incomplete_compositions.md  manual_composition.md  midi_analysis_generation.md
examples/: example_01_simple_melody.py  example_02_motif_transformations.py  example_03_ai_parsing.py  example_04_chords.py  example_04_music21_integration.py  example_05_quick_methods.py  model_output.txt
lament-iteration/: lament-iteration.json  lament-iteration.json.gemini.txt  lament-iteration.mid
pianist/: __init__.py  composition.py  midi_generator.py  music_theory.py  parser.py
references/: metadata.csv.example
schemas/: schema.openapi.json
scripts/: add_initial_references 2.py  add_initial_references.py  analyze_dataset.py  batch_import_references 2.py  batch_import_references.py  check_midi_quality 2.py  check_midi_quality.py  check_test_keys.sh  extract_prompts.py  fix_entry_point 2.py  fix_entry_point.py  generate_metadata_json 2.py  generate_metadata_json.py  normalize_midi_review 2.py  normalize_midi_review.py  quick_analysis.py  review_and_categorize_midi 2.py  review_and_categorize_midi.py  sync_prompts_to_guide.py  test_analysis_examples.sh
src/aimusicgen/: __init__.py  cli.py  midi.py  notes.py  parser.py  schema.py
src/framework/: agent.py  midi.py  parser.py  prompts.py  schema.py
src/pianist/: __init__ 2.py  __init__.py  __main__ 2.py  __main__.py  _entry.py  ai_providers 2.py  ai_providers.py  analyze 2.py  analyze.py  annotations 2.py  annotations.py  cli.py  cli.py.old  composition_metrics 2.py  composition_metrics.py  comprehensive_analysis 2.py  comprehensive_analysis.py  config 2.py  config.py  diff 2.py  diff.py  entry.py  expansion_strategy 2.py  expansion_strategy.py  gemini.py  generate_openapi_schema.py  iterate 2.py  iterate.py  midi_identification.py  musical_analysis 2.py  musical_analysis.py  notes 2.py  notes.py  output_util 2.py  output_util.py  parser.py  pedal_fix 2.py  pedal_fix.py  prompt_templates 2.py  prompt_templates.py  (+6 more)
src/pianist/cli/: README.md  __init__ 2.py  __init__.py  main 2.py  main.py  util 2.py  util.py  util_output.py
src/pianist/cli/commands/: __init__.py  analyze 2.py  analyze.py  annotate 2.py  annotate.py  diff 2.py  diff.py  expand 2.py  expand.py  fix 2.py  fix.py  generate 2.py  generate.py  import_ 2.py  import_.py  modify 2.py  modify.py  reference 2.py  reference.py  render 2.py  render.py
src/pianist/prompts/: __init__ 2.py  __init__.py  system_prompt_full.txt  system_prompt_short.txt
src/pianist/renderers/: __init__ 2.py  __init__.py  mido_renderer 2.py  mido_renderer.py  music21_renderer.py
tests/: __init__.py  conftest.py  integration_helpers.py  test_ai_providers 2.py  test_ai_providers.py  test_ai_providers_gemini.py  test_ai_providers_gemini_integration.py  test_ai_providers_openrouter_integration.py  test_ai_providers_unified_integration.py  test_analyze.py  test_cli.py  test_cli_analyze.py  test_cli_analyze_integration.py  test_cli_analyze_json.py  test_cli_annotate.py  test_cli_annotate_auto_detect.py  test_cli_diff.py  test_cli_expand.py  test_cli_expand_integration.py  test_cli_expand_strategy.py  test_cli_expand_validation.py  test_cli_fix.py  test_cli_generate.py  test_cli_generate_integration.py  test_cli_import.py  test_cli_modify.py  test_cli_modify_integration.py  test_cli_output_util.py  test_cli_refactored.py  test_cli_render.py  test_cli_versioning_integration.py  test_composition.py  test_end_to_end.py  test_expansion_strategy.py  test_gemini.py  test_gemini_integration.py  test_import_module.py  test_iterate.py  test_midi.py  test_midi_generator.py  (+13 more)
