[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianist"
version = "0.1.0"
description = "Framework for converting AI-generated music specifications into MIDI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pianist contributors" }]
dependencies = [
  "pydantic>=2.6.0",
  "json-repair>=0.30.0",
  "mido>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
gemini = [
    "google-genai",
]
dotenv = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
pianist = "pianist.entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pianist.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
