[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianist"
version = "0.1.0"
description = "Composition workflow platform enabling rock solid human-AI collaboration through structured JSON and MIDI conversion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pianist contributors" }]
dependencies = [
  "pydantic>=2.6.0",
  "json-repair>=0.30.0",
  "mido>=1.3.2",
  "music21>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
gemini = [
  "google-genai",
]
dotenv = [
  "python-dotenv>=1.0.0",
]

[project.scripts]
pianist = "pianist.entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pianist.prompts" = ["*.txt"]

# Note: Custom command classes from setup.py are not automatically used
# when using setuptools.build_meta. The fix_entry_point.py script must
# be run manually after pip install -e . to fix the entry point script.

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
