[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianist"
version = "0.1.0"
description = "Composition workflow platform enabling rock solid human-AI collaboration through structured JSON and MIDI conversion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pianist contributors" }]
dependencies = [
  "pydantic>=2.6.0",
  "json-repair>=0.30.0",
  "mido>=1.3.2",
  "music21>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-xdist>=3.0.0",  # Parallel test execution
  "pytest-cov>=4.0.0",  # Code coverage
  "ruff>=0.1.0",  # Fast linter and formatter
  "mypy>=1.7.0",  # Static type checker
  "pre-commit>=3.5.0",  # Git hooks for quality checks
]
gemini = [
  "google-genai",
]
dotenv = [
  "python-dotenv>=1.0.0",
]

[project.scripts]
pianist = "pianist.entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pianist.prompts" = ["*.txt"]

# Note: Custom command classes from setup.py are not automatically used
# when using setuptools.build_meta. The fix_entry_point.py script must
# be run manually after pip install -e . to fix the entry point script.

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Performance optimizations
# Use pytest-xdist for parallel execution: pytest -n auto
# Use --lf (last failed) to rerun only failed tests
# Use --ff (failed first) to run failed tests first
addopts = [
    # Show test durations for slowest tests
    "--durations=10",
    # Show local variables in tracebacks for faster debugging
    "--tb=short",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration (linter and formatter)
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches (allow for complex aggregation functions)
    "PLR0915", # Too many statements (allow for complex aggregation functions)
    "PLR0911", # Too many return statements (acceptable for complex CLI handlers)
    "PLC0415", # Import should be at top-level (allow in scripts)
    "E402",  # Module level import not at top of file (scripts modify sys.path first)
]

[tool.ruff.lint.isort]
known-first-party = ["pianist"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "music21.*",
    "mido.*",
]
ignore_missing_imports = true
